add seo to pages

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contact LevelUp Store for any questions or support. We're here to help with your orders, product inquiries, and more. Reach out via email, phone, live chat, or social media. Your satisfaction is our priority.">
+    <meta name="keywords" content="contact LevelUp Store, customer support, gaming support, order inquiries, product inquiries, reach LevelUp Store, gaming assistance">
     <title>LevelUP Store</title>
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/ce5bce1703.js" crossorigin="anonymous"></script>
