--- a/pages/info.html
+++ b/pages/info.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explore diverse game categories at LevelUp Store, including action, RPG, FPS, sports, racing, simulation, indie games, and more. Find the perfect game for every type of gamer. Shop now and level up your gaming experience!">
+    <meta name="keywords" content="action games, RPG games, first-person shooters, sports games, racing games, simulation games, indie games, family games, casual games, game categories">
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/ce5bce1703.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../assets/img/increase-level-svgrepo-com.svg" type="image/x-icon">
