--- a/pages/login.html
+++ b/pages/login.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Log in to your LevelUp Store account to access your gaming library, track orders, and enjoy personalized recommendations. Secure and easy user authentication for a seamless gaming experience.">
+    <meta name="keywords" content="login, user login, gamer login, LevelUp Store login, account login, sign in, gaming account, customer login, user authentication, secure login">
     <title>LevelUP Store</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="shortcut icon" href="../assets/img/increase-level-svgrepo-com.svg" type="image/x-icon">
