--- a/pages/news.html
+++ b/pages/news.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Stay updated with the latest gaming news, reviews, and articles on LevelUp Store. Get expert tips, industry insights, and community highlights. Follow our blog for everything you need to know about the world of gaming.">
+    <meta name="keywords" content="gaming news, game reviews, gaming articles, gaming tips, video game blog, latest game releases, gaming community, game reviews and articles">
     <title>LevelUP Store</title>
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="shortcut icon" href="../assets/img/increase-level-svgrepo-com.svg" type="image/x-icon">
