--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="LevelUp Store - Your ultimate destination for the latest and greatest in video games. Discover a wide selection of games for all platforms, including PS5, Xbox, PC, and Nintendo. Enjoy competitive prices, fast shipping, and exceptional customer service. Level up your gaming experience today!">
     <meta name="keywords" content="video games, buy video games online, gaming store, LevelUp Store, latest video games, video game deals, PS5 games, Xbox games, PC games, Nintendo games">
     <title>LevelUP Store</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/ce5bce1703.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="./assets/img/increase-level-svgrepo-com.svg" type="image/x-icon">
 </head>
