sass views info

--- a/pages/info.html
+++ b/pages/info.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explore diverse game categories at LevelUp Store, including action, RPG, FPS, sports, racing, simulation, indie games, and more. Find the perfect game for every type of gamer. Shop now and level up your gaming experience!">
     <meta name="keywords" content="action games, RPG games, first-person shooters, sports games, racing games, simulation games, indie games, family games, casual games, game categories">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/main.css">
     <script src="https://kit.fontawesome.com/ce5bce1703.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../assets/img/increase-level-svgrepo-com.svg" type="image/x-icon">
 </head>
 <body>
     <header class="header">
         <div class="menu container">
-            <a href="#" class="logo">LevelUP Store</a>
+            <a href="../index.html" class="logo">LevelUP Store</a>
             <input type="checkbox" id="menu"/>
             <label for="menu">
                 <img src="../assets/img/menu.png" class="menu-icono" alt="menu">
@@ -275,7 +275,7 @@
 
     <footer class="footer container">
         <div class="link">
-            <a href="#" class="logo">LevelUP Store</a>
+            <a href="../index.html" class="logo">LevelUP Store</a>
         </div>
         <div class="link">
             <ul>
